--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   media_kit_libs_android_video: ^1.3.8
   media_kit_libs_windows_video: ^1.0.9
   permission_handler: ^11.0.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
