--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   permission_handler: ^11.0.1
   image_picker: ^1.0.7
 
+dependency_overrides:
+  win32: ^5.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
